DC-256: Add calling user's roles to enumerate snapshots API response (#1227)
- Add calling user's roles to enumerate snapshots and datasets API responses
- Roles are returned as a new top level element, `roleMap`. The contents are the same as the result of the `/roles` API on dataset and snapshot